# brickbot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.toml.example  default.nix  devenv.nix  devenv.yaml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: ADR-001-Ambient-Conversational-Discord-Assistant.md  ADR-002-Hybrid-Zulip-Discord-Bridge.md  api.md  events.md  news.md  runbook.md  training.md
docs/architecture/: database.md  network_and_caching.md
docs/commands/: diagnostics.md  events.md  part.md  set.md
docs/interactions/: README.md  part.md  set.md
locales/: en-US.yml  fi-FI.yml
migrations/: 0001_initial.sql
src/: ambient.rs  brick.rs  config.rs  discord_limits.rs  http.rs  interactions.rs  links.rs  main.rs  notifications.rs  pocketbase.rs  rss.rs
src/commands/: diagnostics.rs  events.rs  mod.rs  part.rs  set.rs
src/db/: ambient.rs  events.rs  feed.rs  inputs.rs  mod.rs  notifications.rs  workflow_sessions.rs
src/events_sync/: discord.rs  mod.rs  pocketbase.rs
src/workflows/: ambient.rs  mod.rs  search.rs
src/workflows/events/: mod.rs  modals.rs  models.rs  outbox.rs  validation.rs  visibility.rs
src/zulip/: api.rs  handler.rs  listener.rs  mod.rs
